[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
anyhow = "1"
serde = "1"
serde_json = "1"
tower-cookies = "0.10"
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sea-orm]
version = "0.12"
features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"]

[workspace]
members = [".", "entity", "migration"]