[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bcrypt = "0.15"
serde = "1"
serde_json = "1"
tower-cookies = "0.10"
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.axum]
version = "0.7"
features = ["json"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sea-orm]
version = "0.12"
features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"]

[workspace]
members = [".", "entity", "migration"]